--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,4 +1,4 @@
-.card-section {
+.itemlistcontainer {
     text-align: center;
     padding: 20px 20px;
     background-color: #ffffff;
@@ -13,14 +13,15 @@
 
 .card-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-bottom: 20px;
+    justify-items: center;
 }
 
 .card1 {
     background: #ffffff;
-    padding: 30px;
+    padding: 20px;
     text-align: center;
     align-items: center;
     
@@ -33,7 +34,7 @@
 }
 
 .card-title {
-    font-size: 18px;
+    font-size: 25px;
     font-weight: bold;
     margin-bottom: 5px;
 }
@@ -45,10 +46,13 @@
 }
 
 .card-price {
-    font-size: 20px;
+    font-size: 15px;
+    padding: 15px;
+    margin: 0 160px;
     font-weight: bold;
     color: #ffffff;
     background-color: #020202;
+    margin-bottom: 25px;
 }
 
 .button-container {
@@ -68,4 +72,15 @@
 
 .view-more-button:hover {
     background-color: #0056b3;
+}
+
+.boton{
+    background-color: #4e4e4e;
+    color: #ffffff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
 }
