--- a/src/components/ItemDetailContainer/ItemDetail.css
+++ b/src/components/ItemDetailContainer/ItemDetail.css
@@ -1,11 +1,12 @@
 .item-detail-container {
     text-align: center;
-    padding: 20px 10px;
+    padding: 10px 10px;
 }
 .item-image {
     max-width: 20%;
     height: auto;
     margin-bottom: 20px;
+
 }
 .item-detail h2 {
     font-size: 1.5rem;
@@ -25,4 +26,27 @@
     margin-bottom: 25px;
 }
 
+.imagenes-secundarias {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.imagenes-secundarias img {
+    width: 100px;
+    height: auto;
+    cursor: pointer;
+}
+
+.image-section {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.imagenes-secundarias img:hover {
+    border-color: #000;
+}
 
